tests/valid/function/local_let_rec_param_shadowing.facet
fn main() -> unrestricted isize {
  let rec f(f: unrestricted isize) -> unrestricted isize {
    f
  }
  in (f 5)
}
