tests/invalid/underscore/underscore_as_expr.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    _
}
